--- a/resources/puppetlabs/lein-ezbake/template/pe/ext/redhat/ezbake.spec.erb
+++ b/resources/puppetlabs/lein-ezbake/template/pe/ext/redhat/ezbake.spec.erb
@@ -11,7 +11,7 @@
 # Log directory
 %global _app_logdir /var/log/puppetlabs/<%= EZBake::Config[:real_name] %>
 # Run directory, PID files go here
-%global _app_rundir /var/run/puppetlabs/<%= EZBake::Config[:real_name] %>
+%global _app_rundir /run/puppetlabs/<%= EZBake::Config[:real_name] %>
 
 # Puppet Installation Layout
 # https://github.com/puppetlabs/puppet-specifications/blob/af82509/file_paths.md
